tests/snapshots/load_test__errors_on_invalid_ledger.snap
---
source: tests/load_test.rs
expression: ledger
---
{
  "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
  "entries": [
    {
      "t": "Open",
      "date": "2000-01-01",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 6,
      "account": "Assets:Account2",
      "currencies": [],
      "booking": null
    },
    {
      "t": "Open",
      "date": "2000-01-01",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 10,
      "account": "Assets:Account3",
      "currencies": [],
      "booking": null
    },
    {
      "t": "Open",
      "date": "2000-01-01",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 15,
      "account": "Assets:DuplBalance",
      "currencies": [],
      "booking": null
    },
    {
      "t": "Open",
      "date": "2000-01-01",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 20,
      "account": "Assets:DuplBalance1",
      "currencies": [],
      "booking": null
    },
    {
      "t": "Open",
      "date": "2000-01-01",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 25,
      "account": "Assets:DuplBalance2",
      "currencies": [],
      "booking": null
    },
    {
      "t": "Open",
      "date": "2000-01-01",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 34,
      "account": "Assets:Inactive",
      "currencies": [],
      "booking": null
    },
    {
      "t": "Commodity",
      "date": "2000-01-01",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 30,
      "currency": "EUR"
    },
    {
      "t": "Close",
      "date": "2000-01-01",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 2,
      "account": "Assets:Account1"
    },
    {
      "t": "Open",
      "date": "2000-01-02",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 3,
      "account": "Assets:Account1",
      "currencies": [],
      "booking": null
    },
    {
      "t": "Open",
      "date": "2000-01-02",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 7,
      "account": "Assets:Account2",
      "currencies": [],
      "booking": null
    },
    {
      "t": "Open",
      "date": "2000-01-02",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 44,
      "account": "NotARoot:Unknown",
      "currencies": [],
      "booking": null
    },
    {
      "t": "Balance",
      "date": "2000-01-02",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 16,
      "account": "Assets:DuplBalance",
      "amount": {
        "number": "10",
        "currency": "EUR"
      },
      "tolerance": null
    },
    {
      "t": "Balance",
      "date": "2000-01-02",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 17,
      "account": "Assets:DuplBalance",
      "amount": {
        "number": "10",
        "currency": "EUR"
      },
      "tolerance": null
    },
    {
      "t": "Balance",
      "date": "2000-01-02",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 21,
      "account": "Assets:DuplBalance1",
      "amount": {
        "number": "10",
        "currency": "EUR"
      },
      "tolerance": null
    },
    {
      "t": "Balance",
      "date": "2000-01-02",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 22,
      "account": "Assets:DuplBalance1",
      "amount": {
        "number": "10",
        "currency": "USD"
      },
      "tolerance": null
    },
    {
      "t": "Balance",
      "date": "2000-01-02",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 26,
      "account": "Assets:DuplBalance2",
      "amount": {
        "number": "10",
        "currency": "EUR"
      },
      "tolerance": null
    },
    {
      "t": "Balance",
      "date": "2000-01-02",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 27,
      "account": "Assets:DuplBalance2",
      "amount": {
        "number": "11",
        "currency": "EUR"
      },
      "tolerance": null
    },
    {
      "t": "Commodity",
      "date": "2000-01-02",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 31,
      "currency": "EUR"
    },
    {
      "t": "Note",
      "date": "2000-01-02",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 41,
      "account": "Assets:Unknown",
      "comment": "note"
    },
    {
      "t": "Close",
      "date": "2000-01-02",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 11,
      "account": "Assets:Account3"
    },
    {
      "t": "Close",
      "date": "2000-01-02",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 35,
      "account": "Assets:Inactive"
    },
    {
      "t": "Transaction",
      "date": "2000-01-03",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 36,
      "flag": "*",
      "payee": null,
      "narration": "",
      "postings": [
        {
          "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
          "line": 37,
          "meta": [],
          "account": "Assets:Inactive",
          "units": {
            "number": "10",
            "currency": "EUR"
          },
          "price": null,
          "cost": null,
          "flag": null
        },
        {
          "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
          "line": 38,
          "meta": [],
          "account": "Assets:Inactive",
          "units": {
            "number": "-10",
            "currency": "EUR"
          },
          "price": null,
          "cost": null,
          "flag": null
        }
      ]
    },
    {
      "t": "Close",
      "date": "2000-01-03",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 12,
      "account": "Assets:Account3"
    }
  ],
  "errors": [
    {
      "filename": null,
      "line": null,
      "message": "Invalid account name 'NotARoot:Unknown' (invalid root account).",
      "entry": null
    },
    {
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 2,
      "message": "Closing unopened account Assets:Account1.",
      "entry": {
        "t": "Close",
        "date": "2000-01-01",
        "meta": [],
        "tags": [],
        "links": [],
        "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
        "line": 2,
        "account": "Assets:Account1"
      }
    },
    {
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 7,
      "message": "Duplicate open directive for account Assets:Account2.",
      "entry": {
        "t": "Open",
        "date": "2000-01-02",
        "meta": [],
        "tags": [],
        "links": [],
        "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
        "line": 7,
        "account": "Assets:Account2",
        "currencies": [],
        "booking": null
      }
    },
    {
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 12,
      "message": "Duplicate close directive for account Assets:Account3.",
      "entry": {
        "t": "Close",
        "date": "2000-01-03",
        "meta": [],
        "tags": [],
        "links": [],
        "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
        "line": 12,
        "account": "Assets:Account3"
      }
    },
    {
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 27,
      "message": "Duplicate balance assertions with different amounts.",
      "entry": {
        "t": "Balance",
        "date": "2000-01-02",
        "meta": [],
        "tags": [],
        "links": [],
        "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
        "line": 27,
        "account": "Assets:DuplBalance2",
        "amount": {
          "number": "11",
          "currency": "EUR"
        },
        "tolerance": null
      }
    },
    {
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 31,
      "message": "Duplicate commodity directive for EUR.",
      "entry": {
        "t": "Commodity",
        "date": "2000-01-02",
        "meta": [],
        "tags": [],
        "links": [],
        "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
        "line": 31,
        "currency": "EUR"
      }
    },
    {
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 41,
      "message": "Invalid reference to unknown account Assets:Unknown.",
      "entry": {
        "t": "Note",
        "date": "2000-01-02",
        "meta": [],
        "tags": [],
        "links": [],
        "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
        "line": 41,
        "account": "Assets:Unknown",
        "comment": "note"
      }
    },
    {
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 36,
      "message": "Invalid reference to inactive account Assets:Inactive.",
      "entry": {
        "t": "Transaction",
        "date": "2000-01-03",
        "meta": [],
        "tags": [],
        "links": [],
        "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
        "line": 36,
        "flag": "*",
        "payee": null,
        "narration": "",
        "postings": [
          {
            "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
            "line": 37,
            "meta": [],
            "account": "Assets:Inactive",
            "units": {
              "number": "10",
              "currency": "EUR"
            },
            "price": null,
            "cost": null,
            "flag": null
          },
          {
            "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
            "line": 38,
            "meta": [],
            "account": "Assets:Inactive",
            "units": {
              "number": "-10",
              "currency": "EUR"
            },
            "price": null,
            "cost": null,
            "flag": null
          }
        ]
      }
    },
    {
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 36,
      "message": "Invalid reference to inactive account Assets:Inactive.",
      "entry": {
        "t": "Transaction",
        "date": "2000-01-03",
        "meta": [],
        "tags": [],
        "links": [],
        "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
        "line": 36,
        "flag": "*",
        "payee": null,
        "narration": "",
        "postings": [
          {
            "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
            "line": 37,
            "meta": [],
            "account": "Assets:Inactive",
            "units": {
              "number": "10",
              "currency": "EUR"
            },
            "price": null,
            "cost": null,
            "flag": null
          },
          {
            "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
            "line": 38,
            "meta": [],
            "account": "Assets:Inactive",
            "units": {
              "number": "-10",
              "currency": "EUR"
            },
            "price": null,
            "cost": null,
            "flag": null
          }
        ]
      }
    },
    {
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 16,
      "message": "Balance failed for 'Assets:DuplBalance': expected 10 EUR != accumulated 0 EUR (10 too little)",
      "entry": {
        "t": "Balance",
        "date": "2000-01-02",
        "meta": [],
        "tags": [],
        "links": [],
        "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
        "line": 16,
        "account": "Assets:DuplBalance",
        "amount": {
          "number": "10",
          "currency": "EUR"
        },
        "tolerance": null
      }
    },
    {
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 17,
      "message": "Balance failed for 'Assets:DuplBalance': expected 10 EUR != accumulated 0 EUR (10 too little)",
      "entry": {
        "t": "Balance",
        "date": "2000-01-02",
        "meta": [],
        "tags": [],
        "links": [],
        "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
        "line": 17,
        "account": "Assets:DuplBalance",
        "amount": {
          "number": "10",
          "currency": "EUR"
        },
        "tolerance": null
      }
    },
    {
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 21,
      "message": "Balance failed for 'Assets:DuplBalance1': expected 10 EUR != accumulated 0 EUR (10 too little)",
      "entry": {
        "t": "Balance",
        "date": "2000-01-02",
        "meta": [],
        "tags": [],
        "links": [],
        "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
        "line": 21,
        "account": "Assets:DuplBalance1",
        "amount": {
          "number": "10",
          "currency": "EUR"
        },
        "tolerance": null
      }
    },
    {
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 22,
      "message": "Balance failed for 'Assets:DuplBalance1': expected 10 USD != accumulated 0 USD (10 too little)",
      "entry": {
        "t": "Balance",
        "date": "2000-01-02",
        "meta": [],
        "tags": [],
        "links": [],
        "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
        "line": 22,
        "account": "Assets:DuplBalance1",
        "amount": {
          "number": "10",
          "currency": "USD"
        },
        "tolerance": null
      }
    },
    {
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 26,
      "message": "Balance failed for 'Assets:DuplBalance2': expected 10 EUR != accumulated 0 EUR (10 too little)",
      "entry": {
        "t": "Balance",
        "date": "2000-01-02",
        "meta": [],
        "tags": [],
        "links": [],
        "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
        "line": 26,
        "account": "Assets:DuplBalance2",
        "amount": {
          "number": "10",
          "currency": "EUR"
        },
        "tolerance": null
      }
    },
    {
      "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
      "line": 27,
      "message": "Balance failed for 'Assets:DuplBalance2': expected 11 EUR != accumulated 0 EUR (11 too little)",
      "entry": {
        "t": "Balance",
        "date": "2000-01-02",
        "meta": [],
        "tags": [],
        "links": [],
        "filename": "[REPO_DIR]/tests/ledgers/invalid-input.beancount",
        "line": 27,
        "account": "Assets:DuplBalance2",
        "amount": {
          "number": "11",
          "currency": "EUR"
        },
        "tolerance": null
      }
    }
  ],
  "options": {
    "title": "",
    "root_accounts": {
      "assets": "Assets",
      "liabilities": "Liabilities",
      "equity": "Equity",
      "income": "Income",
      "expenses": "Expenses"
    },
    "account_current_conversions": "Conversions:Current",
    "account_current_earnings": "Earnings:Current",
    "account_previous_balances": "Opening-Balances",
    "account_previous_conversions": "Conversions:Previous",
    "account_previous_earnings": "Earnings:Previous",
    "render_commas": false,
    "operating_currency": [],
    "conversion_currency": "NOTHING",
    "documents": [],
    "booking_method": "Strict",
    "inferred_tolerance_default": {
      "map": {},
      "default": "0"
    },
    "inferred_tolerance_multiplier": "0.5",
    "insert_pythonpath": false,
    "display_precisions": {
      "EUR": {
        "has_sign": true,
        "max": 0,
        "common": 0
      },
      "USD": {
        "has_sign": false,
        "max": 0,
        "common": 0
      }
    }
  },
  "includes": [
    "[REPO_DIR]/tests/ledgers/invalid-input.beancount"
  ],
  "plugins": []
}
