tests/snapshots/load_test__handles_includes.snap
---
source: tests/load_test.rs
expression: ledger
---
{
  "filename": "[REPO_DIR]/tests/ledgers/test-includes.beancount",
  "entries": [
    {
      "t": "Open",
      "date": "1980-05-12",
      "meta": [],
      "tags": [],
      "links": [],
      "filename": "[REPO_DIR]/tests/ledgers/includes/included.beancount",
      "line": 1,
      "account": "Equity:Included-Account",
      "currencies": [],
      "booking": null
    }
  ],
  "errors": [],
  "options": {
    "title": "",
    "root_accounts": {
      "assets": "Assets",
      "liabilities": "Liabilities",
      "equity": "Equity",
      "income": "Income",
      "expenses": "Expenses"
    },
    "account_current_conversions": "Conversions:Current",
    "account_current_earnings": "Earnings:Current",
    "account_previous_balances": "Opening-Balances",
    "account_previous_conversions": "Conversions:Previous",
    "account_previous_earnings": "Earnings:Previous",
    "render_commas": false,
    "operating_currency": [],
    "conversion_currency": "NOTHING",
    "documents": [],
    "booking_method": "Strict",
    "inferred_tolerance_default": {
      "map": {},
      "default": "0"
    },
    "inferred_tolerance_multiplier": "0.5",
    "insert_pythonpath": false,
    "display_precisions": {}
  },
  "includes": [
    "[REPO_DIR]/tests/ledgers/test-includes.beancount",
    "[REPO_DIR]/tests/ledgers/includes/included.beancount"
  ],
  "plugins": []
}
