tests/snapshots/load_test__missing_file.snap
---
source: tests/load_test.rs
expression: ledger
---
{
  "filename": "[REPO_DIR]/tests/ledgers/non-existent-file-missing.beancount",
  "entries": [],
  "errors": [
    {
      "filename": "[REPO_DIR]/tests/ledgers/non-existent-file-missing.beancount",
      "line": null,
      "message": "Could not read file due to IO error: No such file or directory (os error 2)"
    }
  ],
  "options": {
    "title": "",
    "root_accounts": {
      "assets": "Assets",
      "liabilities": "Liabilities",
      "equity": "Equity",
      "income": "Income",
      "expenses": "Expenses"
    },
    "account_current_conversions": "Conversions:Current",
    "account_current_earnings": "Earnings:Current",
    "account_previous_balances": "Opening-Balances",
    "account_previous_conversions": "Conversions:Previous",
    "account_previous_earnings": "Earnings:Previous",
    "render_commas": false,
    "operating_currency": [],
    "conversion_currency": "NOTHING",
    "documents": [],
    "booking_method": "Strict",
    "inferred_tolerance_default": {
      "map": {},
      "default": "0"
    },
    "inferred_tolerance_multiplier": "0.5",
    "insert_pythonpath": false,
    "display_precisions": {}
  },
  "includes": [
    "[REPO_DIR]/tests/ledgers/non-existent-file-missing.beancount"
  ],
  "plugins": []
}
