tests/snapshots/load_test__reads_document_dir.snap
---
source: tests/load_test.rs
expression: ledger
---
{
  "filename": "[REPO_DIR]/tests/ledgers/documents.beancount",
  "entries": [
    {
      "t": "Open",
      "meta": {
        "filename": "[REPO_DIR]/tests/ledgers/documents.beancount",
        "lineno": 4
      },
      "date": "2000-01-01",
      "tags": [],
      "links": [],
      "account": "Assets:Account1",
      "currencies": [],
      "booking": null
    },
    {
      "t": "Open",
      "meta": {
        "filename": "[REPO_DIR]/tests/ledgers/documents.beancount",
        "lineno": 5
      },
      "date": "2000-01-01",
      "tags": [],
      "links": [],
      "account": "Assets:Account2",
      "currencies": [],
      "booking": null
    },
    {
      "t": "Open",
      "meta": {
        "filename": "[REPO_DIR]/tests/ledgers/documents.beancount",
        "lineno": 6
      },
      "date": "2000-01-01",
      "tags": [],
      "links": [],
      "account": "Assets:Account3",
      "currencies": [],
      "booking": null
    },
    {
      "t": "Open",
      "meta": {
        "filename": "[REPO_DIR]/tests/ledgers/documents.beancount",
        "lineno": 7
      },
      "date": "2000-01-01",
      "tags": [],
      "links": [],
      "account": "Assets:AccountWithoutDocuments",
      "currencies": [],
      "booking": null
    },
    {
      "t": "Open",
      "meta": {
        "filename": "[REPO_DIR]/tests/ledgers/documents.beancount",
        "lineno": 8
      },
      "date": "2000-01-01",
      "tags": [],
      "links": [],
      "account": "Expenses:AccountWithoutDocuments",
      "currencies": [],
      "booking": null
    },
    {
      "t": "Document",
      "meta": {
        "filename": "[REPO_DIR]/tests/ledgers/documents.beancount",
        "lineno": 0
      },
      "date": "2000-01-01",
      "tags": [],
      "links": [],
      "account": "Assets:Account1",
      "filename": "[REPO_DIR]/tests/ledgers/documents/Assets/Account1/2000-01-01.doc.txt"
    },
    {
      "t": "Document",
      "meta": {
        "filename": "[REPO_DIR]/tests/ledgers/documents.beancount",
        "lineno": 0
      },
      "date": "2000-01-01",
      "tags": [],
      "links": [],
      "account": "Assets:Account2",
      "filename": "[REPO_DIR]/tests/ledgers/documents/Assets/Account2/2000-01-01.doc.txt"
    },
    {
      "t": "Document",
      "meta": {
        "filename": "[REPO_DIR]/tests/ledgers/documents.beancount",
        "lineno": 0
      },
      "date": "2000-01-01",
      "tags": [],
      "links": [],
      "account": "Assets:Account3",
      "filename": "[REPO_DIR]/tests/ledgers/documents/Assets/Account3/2000-01-01.doc.txt"
    },
    {
      "t": "Document",
      "meta": {
        "filename": "[REPO_DIR]/tests/ledgers/documents.beancount",
        "lineno": 0
      },
      "date": "2022-12-31",
      "tags": [],
      "links": [],
      "account": "Assets:Account1",
      "filename": "[REPO_DIR]/tests/ledgers/documents/Assets/Account1/2022-12-31 test.txt"
    },
    {
      "t": "Document",
      "meta": {
        "filename": "[REPO_DIR]/tests/ledgers/documents.beancount",
        "lineno": 0
      },
      "date": "2022-12-31",
      "tags": [],
      "links": [],
      "account": "Assets:Account2",
      "filename": "[REPO_DIR]/tests/ledgers/documents/Assets/Account2/2022-12-31 test.txt"
    },
    {
      "t": "Document",
      "meta": {
        "filename": "[REPO_DIR]/tests/ledgers/documents.beancount",
        "lineno": 0
      },
      "date": "2022-12-31",
      "tags": [],
      "links": [],
      "account": "Assets:Account3",
      "filename": "[REPO_DIR]/tests/ledgers/documents/Assets/Account3/2022-12-31 test.txt"
    }
  ],
  "errors": [
    {
      "filename": "[REPO_DIR]/tests/ledgers/documents.beancount",
      "lineno": null,
      "message": "Could not read documents directory: '[REPO_DIR]/tests/ledgers/not_a_directory'",
      "entry": null
    }
  ],
  "options": {
    "title": "",
    "root_accounts": {
      "assets": "Assets",
      "liabilities": "Liabilities",
      "equity": "Equity",
      "income": "Income",
      "expenses": "Expenses"
    },
    "account_current_conversions": "Conversions:Current",
    "account_current_earnings": "Earnings:Current",
    "account_previous_balances": "Opening-Balances",
    "account_previous_conversions": "Conversions:Previous",
    "account_previous_earnings": "Earnings:Previous",
    "render_commas": false,
    "operating_currency": [],
    "conversion_currency": "NOTHING",
    "documents": [
      "documents",
      "not_a_directory"
    ],
    "booking_method": "Strict",
    "inferred_tolerance_default": {
      "map": {},
      "default": "0"
    },
    "inferred_tolerance_multiplier": "0.5",
    "insert_pythonpath": false,
    "display_precisions": {}
  },
  "includes": [
    "[REPO_DIR]/tests/ledgers/documents.beancount"
  ],
  "plugins": []
}
